2008-11-05  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.DrawMap/Cumberland.DrawMap.csproj,
	  Cumberland.DrawMap/Main.cs, cumberland.sln,
	  Cumberland.Data.SqlServer,
	  Cumberland.Data.SqlServer/AssemblyInfo.cs,
	  Cumberland.Data.SqlServer/SqlServerFeatureSource.cs,
	  Cumberland.Data.SqlServer/Cumberland.Data.SqlServer.csproj: add sql
	  server 2008 feature source
	* Cumberland.Data.PostGIS/PostGISFeatureSource.cs: clean up

2008-11-04  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.Data.PostGIS/PostGISFeatureSource.cs: add theming

2008-11-04  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.Data.PostGIS/PostGISFeatureSource.cs: hook up shapefile

2008-11-04  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.Drawing.OpenGL/OpenGlMapDrawer.cs: move layer style stuff
	  to separate class

2008-11-04  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.DrawMap/Cumberland.DrawMap.csproj,
	  Cumberland.DrawMap/lib/NDesk,Options.COPYING,
	  Cumberland.DrawMap/lib/NDesk.Options.COPYING,
	  Cumberland.InteractiveMap/Cumberland.InteractiveMap.csproj,
	  Cumberland.InteractiveMap/lib/NDesk,Options.COPYING,
	  Cumberland.InteractiveMap/lib/NDesk.Options.COPYING,
	  Cumberland.Data.SqlServer.Loader/lib/NDesk,Options.COPYING,
	  Cumberland.Data.SqlServer.Loader/lib/NDesk.Options.COPYING,
	  Cumberland.Data.SqlServer.Loader/Cumberland.Data.SqlServer.Loader.csproj:
	  rename file

2008-11-03  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.Data.SqlServer.Loader/AssemblyInfo.cs: improvements
	* Cumberland.Data.SqlServer.Loader/Main.cs: improve

2008-11-03  Scott Ellington <scott.ellington@gmail.com> 

	* cumberland.sln, Cumberland.Data.SqlServer.Loader,
	  Cumberland.Data.SqlServer.Loader/AssemblyInfo.cs,
	  Cumberland.Data.SqlServer.Loader/lib,
	  Cumberland.Data.SqlServer.Loader/lib/NDesk,Options.COPYING,
	  Cumberland.Data.SqlServer.Loader/lib/NDesk.Options.dll,