@@ -62,7 +62,7 @@ Global
 	GlobalSection(MonoDevelopProperties) = preSolution
 		name = cumberland
 		version = 0.1
-		StartupItem = Cumberland.InteractiveMap\Cumberland.InteractiveMap.csproj
+		StartupItem = Cumberland.TileViewerTest\Cumberland.TileViewerTest.csproj
 		MonoDevelop.ChangeLogAddIn.ChangeLogInfo = $0
 		$0.policy = UpdateNearestChangeLog
 	EndGlobalSection
