@@ -1,5 +1,10 @@
 2008-11-05  Scott Ellington <scott.ellington@gmail.com> 
 
+	* Cumberland.csproj, Web, Web/TileProvider.cs: extract tile generating
+	  code into separate class
+
+2008-11-05  Scott Ellington <scott.ellington@gmail.com> 
+
 	* WellKnownText.cs: add methods
 	* Data/FeatureType.cs, Data/IFeatureSource.cs, Cumberland.csproj:
 	  separate
