@@ -1,5 +1,10 @@
 2008-11-05  Scott Ellington <scott.ellington@gmail.com> 
 
+	* cumberland.sln, Cumberland.TileViewerTest/TileProvider.aspx.cs:
+	  extract tile generating code into separate class
+
+2008-11-05  Scott Ellington <scott.ellington@gmail.com> 
+
 	* Cumberland.DrawMap/Cumberland.DrawMap.csproj,
 	  Cumberland.DrawMap/Main.cs, cumberland.sln,
 	  Cumberland.Data.SqlServer,
